finish libsolv-pool manpage

--- a/doc/libsolv-bindings.3
+++ b/doc/libsolv-bindings.3
@@ -2722,17 +2722,17 @@ Selections are a way to easily deal with sets of packages\&. There are multiple 
 .PP
 \fBSELECTION_NAME\fR
 .RS 4
-Create the selection by matching package names
+Create the selection by matching package names\&.
 .RE
 .PP
 \fBSELECTION_PROVIDES\fR
 .RS 4
-Create the selection by matching package provides
+Create the selection by matching package provides\&.
 .RE
 .PP
 \fBSELECTION_FILELIST\fR
 .RS 4
-Create the selection by matching package files
+Create the selection by matching package files\&.
 .RE
 .PP
 \fBSELECTION_CANON\fR
@@ -2987,7 +2987,7 @@ Allow to break the dependencies of the matching packages\&. Handle with care\&.
 .PP
 \fBSOLVER_MULTIVERSION\fR
 .RS 4
-Mark the matched packages for multiversion install\&. If they get to be installed because of some other job, the installation will keep the old version of the package installed (for rpm by using \(lq\-i\(rq instead of \(lq\-U\(rq)\&.
+Mark the matched packages for multiversion install\&. If they get to be installed because of some other job, the installation will keep the old version of the package installed (for rpm this is done by using \(lq\-i\(rq instead of \(lq\-U\(rq)\&.
 .RE
 .PP
 \fBSOLVER_LOCK\fR
