--- a/doc/libsolv.3
+++ b/doc/libsolv.3
@@ -2,12 +2,12 @@
 .\"     Title: Libsolv
 .\"    Author: [see the "Author" section]
 .\" Generator: DocBook XSL Stylesheets v1.76.1 <http://docbook.sf.net/>
-.\"      Date: 06/12/2013
+.\"      Date: 06/14/2013
 .\"    Manual: LIBSOLV
 .\"    Source: libsolv
 .\"  Language: English
 .\"
-.TH "LIBSOLV" "3" "06/12/2013" "libsolv" "LIBSOLV"
+.TH "LIBSOLV" "3" "06/14/2013" "libsolv" "LIBSOLV"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -46,6 +46,11 @@ fixed Ids for often used strings
 \fBlibsolv\-bindings\fR
 .RS 4
 access libsolv from perl/python/ruby
+.RE
+.PP
+\fBlibsolv\-pool\fR
+.RS 4
+libsolv\(cqs pool object
 .RE
 .SH "POINTER VALIDITY"
 .sp
