--- a/doc/libsolv-constantids.3
+++ b/doc/libsolv-constantids.3
@@ -2,12 +2,12 @@
 .\"     Title: Libsolv-Constantids
 .\"    Author: [see the "Author" section]
 .\" Generator: DocBook XSL Stylesheets v1.76.1 <http://docbook.sf.net/>
-.\"      Date: 06/11/2013
+.\"      Date: 06/18/2013
 .\"    Manual: LIBSOLV
 .\"    Source: libsolv
 .\"  Language: English
 .\"
-.TH "LIBSOLV\-CONSTANTIDS" "3" "06/11/2013" "libsolv" "LIBSOLV"
+.TH "LIBSOLV\-CONSTANTIDS" "3" "06/18/2013" "libsolv" "LIBSOLV"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -340,22 +340,22 @@ The array containing the package list of the update\&.
 .PP
 \fBUPDATE_COLLECTION_NAME "update:collection:name"\fR
 .RS 4
-The name of the to be updated package\&.
+The name of the updated package\&.
 .RE
 .PP
 \fBUPDATE_COLLECTION_EVR "update:collection:evr"\fR
 .RS 4
-The version of the to be updated package\&.
+The version of the updated package\&.
 .RE
 .PP
 \fBUPDATE_COLLECTION_ARCH "update:collection:arch"\fR
 .RS 4
-The architecture of the to be updated package\&.
+The architecture of the updated package\&.
 .RE
 .PP
 \fBUPDATE_COLLECTION_FILENAME "update:collection:filename"\fR
 .RS 4
-The file name of the to be updated package\&.
+The file name of the updated package\&.
 .RE
 .PP
 \fBUPDATE_REFERENCE "update:reference"\fR
