--- a/doc/libsolv-bindings.3
+++ b/doc/libsolv-bindings.3
@@ -4938,7 +4938,7 @@ Back pointer to repository object\&.
 .\}
 .sp
 The id of the repodata area\&. Repodata ids of different repositories overlap\&.
-.SS "METHODS ===="
+.SS "METHODS"
 .sp
 .if n \{\
 .RS 4
