--- a/doc/libsolv-constantids.3
+++ b/doc/libsolv-constantids.3
@@ -2,12 +2,12 @@
 .\"     Title: Libsolv-Constantids
 .\"    Author: [see the "Author" section]
 .\" Generator: DocBook XSL Stylesheets v1.78.0 <http://docbook.sf.net/>
-.\"      Date: 09/20/2013
+.\"      Date: 10/15/2013
 .\"    Manual: LIBSOLV
 .\"    Source: libsolv
 .\"  Language: English
 .\"
-.TH "LIBSOLV\-CONSTANTIDS" "3" "09/20/2013" "libsolv" "LIBSOLV"
+.TH "LIBSOLV\-CONSTANTIDS" "3" "10/15/2013" "libsolv" "LIBSOLV"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -385,7 +385,7 @@ The title of the reference, e\&.g\&. the bug summary\&.
 .PP
 \fBPRODUCT_REFERENCEFILE "product:referencefile"\fR
 .RS 4
-A reference to another product file\&.
+The basename of the product file in the package\&.
 .RE
 .PP
 \fBPRODUCT_SHORTLABEL "product:shortlabel"\fR
@@ -395,12 +395,12 @@ A identification string of the product\&.
 .PP
 \fBPRODUCT_DISTPRODUCT "product:distproduct"\fR
 .RS 4
-A SUSE Code\-10 product name\&.
+Obsolete, do not use\&. Was a SUSE Code\-10 product name\&.
 .RE
 .PP
 \fBPRODUCT_DISTVERSION "product:distversion"\fR
 .RS 4
-A SUSE Code\-10 product version\&.
+Obsolete, do not use\&. Was a SUSE Code\-10 product version\&.
 .RE
 .PP
 \fBPRODUCT_TYPE "product:type"\fR
@@ -425,12 +425,12 @@ An array of product flags\&.
 .PP
 \fBPRODUCT_PRODUCTLINE "product:productline"\fR
 .RS 4
-A product line string\&.
+A product line string used for product registering\&.
 .RE
 .PP
 \fBPRODUCT_REGISTER_TARGET "product:regtarget"\fR
 .RS 4
-A target for proudct registering\&.
+A target for prouduct registering\&.
 .RE
 .PP
 \fBPRODUCT_REGISTER_RELEASE "product:regrelease"\fR
@@ -445,7 +445,7 @@ The keyid of a pubkey, consisting of 8 bytes in hex\&.
 .PP
 \fBPUBKEY_FINGERPRINT "pubkey:fingerprint"\fR
 .RS 4
-The fingerprint of a pubkey, usually a sha1sum in hex\&. Old V3 RSA keys use an md5sum instead\&.
+The fingerprint of a pubkey, usually a sha1sum in hex\&. Old V3 RSA keys use a md5sum instead\&.
 .RE
 .PP
 \fBPUBKEY_EXPIRES "pubkey:expires"\fR
@@ -475,7 +475,7 @@ A list of other patterns that this pattern extends\&.
 .PP
 \fBSOLVABLE_ICON "solvable:icon"\fR
 .RS 4
-The icon of a pattern\&.
+The icon name of a pattern\&.
 .RE
 .PP
 \fBSOLVABLE_ORDER "solvable:order"\fR
