Tweak the README (suggested by Michael Tautschnig)

--- a/README
+++ b/README
@@ -9,7 +9,11 @@ This code is based on two major, but independent, blocks:
  2. Using satisfiability, a well known and researched topic, for
     resolving package dependencies.
 
-Google for 'sat solver' to get links to the theory behind it.
+The sat-solver code has been written to aim for the newest packages,
+record the decison tree to provide introspection, and also allows to
+provide the user with suggestions on how to deal with unsolvable
+problems. It also takes advantage of the repository storage to
+minimize memory usage.
 
 Supported package formats:
   - rpm/rpm5
